--- a/PACKER/Examples/Ex_3/provision_ansible/roles/random_role_name/tasks/main.yml
+++ b/PACKER/Examples/Ex_3/provision_ansible/roles/random_role_name/tasks/main.yml
@@ -1,4 +1,4 @@
-#Tasks defined for main.yml file
+#Tasks defined for main_with_role.yml file
 
 -
   name: Make sure traceroute is installed, update if not latest version
