new examples are added

--- a/PACKER/Examples/Ex_5_update_reboot_os_redhat_opt1/provision_ansible/roles/random_role_name/tasks/main.yml
+++ b/PACKER/Examples/Ex_5_update_reboot_os_redhat_opt1/provision_ansible/roles/random_role_name/tasks/main.yml
@@ -5,7 +5,7 @@
 ## Update OS
 #############
 - name: Launch OS updating and reboot
-  include: update_os.yml
+  include: update_os_redhat.yml
 
 -
   name: Make sure traceroute is installed, update if not latest version
